// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API handler wrapper for express.js should work with custom handler with any client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with custom handler with any client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "200",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with custom handler with any client request 3`] = `
Object {
  "callCount": 5,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"One-Header-Name\\"",
        "\\"One-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Two-Header-Name\\"",
        "\\"Two-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"One-Cookie-Name=One-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=Two-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with custom handler with any client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"type\\":\\"Buffer\\",\\"data\\":[123,34,97,100,97,112,116,101,114,34,58,34,101,120,112,114,101,115,115,34,44,34,109,101,116,104,111,100,34,58,34,72,84,84,80,45,86,69,82,66,34,44,34,113,117,101,114,121,34,58,123,34,113,117,101,114,121,45,110,97,109,101,45,49,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,49,34,44,34,113,117,101,114,121,45,110,97,109,101,45,50,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,50,34,125,44,34,112,97,116,104,34,58,34,80,65,84,72,95,73,78,70,79,34,44,34,104,101,97,100,101,114,115,34,58,123,34,104,101,97,100,101,114,45,110,97,109,101,45,49,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,49,34,44,34,104,101,97,100,101,114,45,110,97,109,101,45,50,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,50,34,44,34,99,111,111,107,105,101,34,58,34,99,111,111,107,105,101,45,99,111,110,116,101,110,116,34,44,34,104,111,115,116,34,58,34,104,111,115,116,45,99,111,110,116,101,110,116,34,125,44,34,99,111,111,107,105,101,115,34,58,123,125,44,34,98,111,100,121,34,58,110,117,108,108,44,34,112,97,114,97,109,34,58,34,118,97,108,117,101,34,44,34,101,120,105,115,116,105,110,103,72,101,97,100,101,114,34,58,34,84,119,111,45,72,101,97,100,101,114,45,86,97,108,117,101,34,44,34,109,105,115,115,105,110,103,72,101,97,100,101,114,34,58,110,117,108,108,125]}",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with custom handler with any client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with error throwing handler 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with error throwing handler 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "500",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with error throwing handler 3`] = `
Object {
  "callCount": 0,
  "callsInfo": Array [],
}
`;

exports[`API handler wrapper for express.js should work with error throwing handler 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"Error: Custom error\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with error throwing handler 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with file handler with any client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with file handler with any client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "200",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with file handler with any client request 3`] = `
Object {
  "callCount": 6,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"One-Header-Name\\"",
        "\\"One-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Two-Header-Name\\"",
        "\\"Two-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"One-Cookie-Name=One-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=Two-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Content-Disposition\\"",
        "\\"attachment; filename=\\\\\\"synthetic-filename.txt\\\\\\"\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with file handler with any client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"type\\":\\"Buffer\\",\\"data\\":[123,34,97,100,97,112,116,101,114,34,58,34,101,120,112,114,101,115,115,34,44,34,109,101,116,104,111,100,34,58,34,72,84,84,80,45,86,69,82,66,34,44,34,113,117,101,114,121,34,58,123,34,113,117,101,114,121,45,110,97,109,101,45,49,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,49,34,44,34,113,117,101,114,121,45,110,97,109,101,45,50,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,50,34,125,44,34,112,97,116,104,34,58,34,80,65,84,72,95,73,78,70,79,34,44,34,104,101,97,100,101,114,115,34,58,123,34,104,101,97,100,101,114,45,110,97,109,101,45,49,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,49,34,44,34,104,101,97,100,101,114,45,110,97,109,101,45,50,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,50,34,44,34,99,111,111,107,105,101,34,58,34,99,111,111,107,105,101,45,99,111,110,116,101,110,116,34,44,34,104,111,115,116,34,58,34,104,111,115,116,45,99,111,110,116,101,110,116,34,125,44,34,99,111,111,107,105,101,115,34,58,123,125,44,34,98,111,100,121,34,58,110,117,108,108,44,34,112,97,114,97,109,34,58,34,118,97,108,117,101,34,44,34,101,120,105,115,116,105,110,103,72,101,97,100,101,114,34,58,34,84,119,111,45,72,101,97,100,101,114,45,86,97,108,117,101,34,44,34,109,105,115,115,105,110,103,72,101,97,100,101,114,34,58,110,117,108,108,125]}",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with file handler with any client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with GET client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with GET client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "200",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with GET client request 3`] = `
Object {
  "callCount": 5,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"One-Header-Name\\"",
        "\\"One-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Two-Header-Name\\"",
        "\\"Two-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"One-Cookie-Name=One-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=Two-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with GET client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"{\\\\\\"adapter\\\\\\":\\\\\\"express\\\\\\",\\\\\\"method\\\\\\":\\\\\\"HTTP-VERB\\\\\\",\\\\\\"query\\\\\\":{\\\\\\"query-name-1\\\\\\":\\\\\\"query-value-1\\\\\\",\\\\\\"query-name-2\\\\\\":\\\\\\"query-value-2\\\\\\"},\\\\\\"path\\\\\\":\\\\\\"PATH_INFO\\\\\\",\\\\\\"headers\\\\\\":{\\\\\\"header-name-1\\\\\\":\\\\\\"header-value-1\\\\\\",\\\\\\"header-name-2\\\\\\":\\\\\\"header-value-2\\\\\\",\\\\\\"cookie\\\\\\":\\\\\\"cookie-content\\\\\\",\\\\\\"host\\\\\\":\\\\\\"host-content\\\\\\"},\\\\\\"cookies\\\\\\":{},\\\\\\"body\\\\\\":null,\\\\\\"param\\\\\\":\\\\\\"value\\\\\\",\\\\\\"existingHeader\\\\\\":\\\\\\"Two-Header-Value\\\\\\",\\\\\\"missingHeader\\\\\\":null}\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with GET client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with POST client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with POST client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "200",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with POST client request 3`] = `
Object {
  "callCount": 5,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"One-Header-Name\\"",
        "\\"One-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Two-Header-Name\\"",
        "\\"Two-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"One-Cookie-Name=One-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=Two-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with POST client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"{\\\\\\"adapter\\\\\\":\\\\\\"express\\\\\\",\\\\\\"method\\\\\\":\\\\\\"HTTP-VERB\\\\\\",\\\\\\"query\\\\\\":{\\\\\\"query-name-1\\\\\\":\\\\\\"query-value-1\\\\\\",\\\\\\"query-name-2\\\\\\":\\\\\\"query-value-2\\\\\\"},\\\\\\"path\\\\\\":\\\\\\"PATH_INFO\\\\\\",\\\\\\"headers\\\\\\":{\\\\\\"header-name-1\\\\\\":\\\\\\"header-value-1\\\\\\",\\\\\\"header-name-2\\\\\\":\\\\\\"header-value-2\\\\\\",\\\\\\"cookie\\\\\\":\\\\\\"cookie-content\\\\\\",\\\\\\"host\\\\\\":\\\\\\"host-content\\\\\\"},\\\\\\"cookies\\\\\\":{},\\\\\\"body\\\\\\":\\\\\\"Body partition oneBody partition two\\\\\\",\\\\\\"param\\\\\\":\\\\\\"value\\\\\\",\\\\\\"existingHeader\\\\\\":\\\\\\"Two-Header-Value\\\\\\",\\\\\\"missingHeader\\\\\\":null}\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with primitive JSON handler with POST client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with redirect handler with any client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with redirect handler with any client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "500",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with redirect handler with any client request 3`] = `
Object {
  "callCount": 0,
  "callsInfo": Array [],
}
`;

exports[`API handler wrapper for express.js should work with redirect handler with any client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"Error: Response already sent\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\\\n    <STACK_FRAME>\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with redirect handler with any client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with text handler with any client request 1`] = `
Object {
  "callCount": 3,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"error\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"data\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
    Object {
      "args": Array [
        "\\"end\\"",
        "[FUNCTION IMPLEMENTATION]",
      ],
      "returnValue": "undefined",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with text handler with any client request 2`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "200",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with text handler with any client request 3`] = `
Object {
  "callCount": 5,
  "callsInfo": Array [
    Object {
      "args": Array [
        "\\"One-Header-Name\\"",
        "\\"One-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Two-Header-Name\\"",
        "\\"Two-Header-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"One-Cookie-Name=One-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=Two-Cookie-Value\\"",
      ],
      "returnValue": "{}",
    },
    Object {
      "args": Array [
        "\\"Set-Cookie\\"",
        "\\"Two-Cookie-Name=\\"",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with text handler with any client request 4`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"type\\":\\"Buffer\\",\\"data\\":[123,34,97,100,97,112,116,101,114,34,58,34,101,120,112,114,101,115,115,34,44,34,109,101,116,104,111,100,34,58,34,72,84,84,80,45,86,69,82,66,34,44,34,113,117,101,114,121,34,58,123,34,113,117,101,114,121,45,110,97,109,101,45,49,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,49,34,44,34,113,117,101,114,121,45,110,97,109,101,45,50,34,58,34,113,117,101,114,121,45,118,97,108,117,101,45,50,34,125,44,34,112,97,116,104,34,58,34,80,65,84,72,95,73,78,70,79,34,44,34,104,101,97,100,101,114,115,34,58,123,34,104,101,97,100,101,114,45,110,97,109,101,45,49,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,49,34,44,34,104,101,97,100,101,114,45,110,97,109,101,45,50,34,58,34,104,101,97,100,101,114,45,118,97,108,117,101,45,50,34,44,34,99,111,111,107,105,101,34,58,34,99,111,111,107,105,101,45,99,111,110,116,101,110,116,34,44,34,104,111,115,116,34,58,34,104,111,115,116,45,99,111,110,116,101,110,116,34,125,44,34,99,111,111,107,105,101,115,34,58,123,125,44,34,98,111,100,121,34,58,110,117,108,108,44,34,112,97,114,97,109,34,58,34,118,97,108,117,101,34,44,34,101,120,105,115,116,105,110,103,72,101,97,100,101,114,34,58,34,84,119,111,45,72,101,97,100,101,114,45,86,97,108,117,101,34,44,34,109,105,115,115,105,110,103,72,101,97,100,101,114,34,58,110,117,108,108,125]}",
      ],
      "returnValue": "{}",
    },
  ],
}
`;

exports[`API handler wrapper for express.js should work with text handler with any client request 5`] = `
Object {
  "callCount": 1,
  "callsInfo": Array [
    Object {
      "args": Array [
        "{\\"method\\":\\"HTTP-VERB\\",\\"query\\":{\\"query-name-1\\":\\"query-value-1\\",\\"query-name-2\\":\\"query-value-2\\"},\\"path\\":\\"PATH_INFO\\",\\"headers\\":{\\"header-name-1\\":\\"header-value-1\\",\\"header-name-2\\":\\"header-value-2\\",\\"cookie\\":\\"cookie-content\\",\\"host\\":\\"host-content\\"}}",
        "{}",
      ],
      "returnValue": "{\\"param\\":\\"value\\"}",
    },
  ],
}
`;
